# whisper-dev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench-all-x5.bat  bench-all.bat  bench-cpu-all.bat  jetson.txt  notes.txt  server.txt
results/: ally-ubu-results-vulkan.jsonl  ally-ubu-results-vulkank-all.jsonl  ally-ubu-results.txt  ally-win-results-vulkan.jsonl  ideapad-ubu-results-cuda.jsonl  ideapad-ubu-results-small-cuda.jsonl  ideapad-win-results-cuda.jsonl  ideapad-win-results.txt  jetson-results-cuda.jsonl  jetson-ubu-results-cuda-all.jsonl  jetson-ubu-results-cuda.jsonl  l40s-ubu-results-cuda-all.jsonl  legion-ubu-results-cuda-all.jsonl  legion-ubu-results-cuda.jsonl  legion-win-results-cpu-all.jsonl  legion-win-results-cuda-all-x5.jsonl  legion-win-results-cuda-all.jsonl  legion-win-results-cuda.jsonl  lenovo-ubu-results.txt  lenovo-win-results.txt  m4-mini-mac-results-mac-all-x5.jsonl  m4-mini-mac-results-mac-all.jsonl  m4-mini-mac-results-mac.jsonl  results-cuda-all-x5.jsonl
results/txt/: ally-win-results.txt  ideapad-ubu-results.txt  lenovo-win-results.txt
scripts/: bench-all-cuda.sh  bench-all-x5.bat  bench-all-x5.sh  bench-all.bat  bench-all.sh  bench-all5.sh  bench-cpu-all.bat  bench-cpu.bat  bench-cpu.sh  bench-cuda-all-x5.sh  bench-cuda-all.bat  bench-cuda-all.sh  bench-cuda.sh  bench-mac-all.sh  bench-mac-all5.sh  bench-mac.sh  bench-vulkan-all-x5.sh  bench-vulkan-all.sh  bench-vulkan.bat  bench-vulkan.sh  bench.bat  bench.sh  test-mac.sh  test.bat  test.sh
