#
# cmake -B build -DCMAKE_TOOLCHAIN_FILE="D:/git/vcpkg/scripts/buildsystems/vcpkg.cmake"
#
cmake_minimum_required(VERSION 3.5...4.0.2)
project("whisper-pascal")
if (POLICY CMP0077)
  cmake_policy(SET CMP0077 NEW)
endif()
set(WHISPER_BUILD_EXAMPLES ON)
set(WHISPER_BACKEND_DL ON)
set(GGML_BLAS ON)
set(WHISPER_OPENVINO ON)
set(GGML_CUDA ON)
set(CMAKE_CUDA_ARCHITECTURES "50;75")
set(GGML_VULKAN ON)
if(WIN32)
    if(NOT GGML_BLAS_VENDOR)
        set(GGML_BLAS_VENDOR "OpenBLAS")
    endif()
    if(NOT OpenVINO_DIR)
        set(OpenVINO_DIR "C:/lib/openvino/2024.6.0/runtime/cmake")
    endif()
elseif(UNIX)
    MESSAGE(FATAL "UNIX needs defining")
elseif(APPLE)
    MESSAGE(FATAL "APPLE needs defining")
else()
    MESSAGE(FATAL "Unsupported OS")
endif()

set(CMAKE_INSTALL_PREFIX "built")
add_subdirectory(whisper.cpp)
