#
# cmake -B build -DCMAKE_TOOLCHAIN_FILE="D:/git/vcpkg/scripts/buildsystems/vcpkg.cmake"
#
cmake_minimum_required(VERSION 3.5...4.0.2)
project("whisper-pascal")
if (POLICY CMP0077)
  cmake_policy(SET CMP0077 NEW)
endif()
set(OpenVINO_DIR_WIN_DEFAULT "C:/lib/openvino/2024.6.0/runtime/cmake")
set(WHISPER_BUILD_EXAMPLES ON)
set(WHISPER_BACKEND_DL ON)
set(GGML_BLAS ON)
set(WHISPER_OPENVINO ON)
set(GGML_CUDA ON)
set(CMAKE_CUDA_ARCHITECTURES "50;75;86;89;120")
set(GGML_VULKAN ON)
if(WIN32)
    if(NOT GGML_BLAS_VENDOR)
        set(GGML_BLAS_VENDOR "OpenBLAS")
    endif()
    if(NOT OpenVINO_DIR)
        set(OpenVINO_DIR ${OpenVINO_DIR_WIN_DEFAULT})
    endif()
    if(NOT EXISTS ${OpenVINO_DIR})
        MESSAGE(FATAL_ERROR "OpenVINO_DIR ${OpenVINO_DIR_DEFAULT} does not exist - aborting")
    endif()
    add_subdirectory(whisper.cpp)
elseif(UNIX)
    MESSAGE(FATAL_ERROR "UNIX needs defining")
elseif(APPLE)
    MESSAGE(FATAL_ERROR "APPLE needs defining")
else()
    MESSAGE(FATAL_ERROR "Unsupported OS")
endif()

set(CMAKE_INSTALL_PREFIX "built")
