#
# source ~/build_libs/vulkan/1.4.313.0/setup-env.sh 
# cmake -B build -DCMAKE_TOOLCHAIN_FILE="D:/git/vcpkg/scripts/buildsystems/vcpkg.cmake"
#
cmake_minimum_required(VERSION 3.5...4.0.2)
project("whisper-pascal")
if (POLICY CMP0077)
  cmake_policy(SET CMP0077 NEW)
endif()
set(OpenVINO_DIR_WINDOWS_DEFAULT "C:/lib/openvino/2024.6.0/runtime/cmake")
set(OpenVINO_DIR_LINUX_DEFAULT "/home/simon/build_libs/openvino/2024.6.0/runtime/cmake")
set(WHISPER_BUILD_EXAMPLES ON)
set(WHISPER_BACKEND_DL ON)
set(GGML_BLAS ON)
set(WHISPER_OPENVINO ON)
if (CMAKE_SYSTEM_NAME MATCHES "Windows")
    if(NOT GGML_BLAS_VENDOR)
        set(GGML_BLAS_VENDOR "OpenBLAS")
    endif()
    if(NOT OpenVINO_DIR)
        set(OpenVINO_DIR ${OpenVINO_DIR_WINDOWS_DEFAULT})
    endif()
    if(NOT EXISTS ${OpenVINO_DIR})
        MESSAGE(FATAL_ERROR "OpenVINO_DIR ${OpenVINO_DIR} does not exist - aborting")
    endif()
    set(CMAKE_CUDA_ARCHITECTURES "50;75;86;89;120")
    set(GGML_CUDA ON)
    set(GGML_VULKAN ON)
    add_subdirectory(whisper.cpp)
elseif (CMAKE_SYSTEM_NAME MATCHES "Linux")
   set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
   if(NOT GGML_BLAS_VENDOR)
        set(GGML_BLAS_VENDOR "OpenBLAS")
    endif()
    if(NOT OpenVINO_DIR)
        set(OpenVINO_DIR ${OpenVINO_DIR_LINUX_DEFAULT})
    endif()
    if(NOT EXISTS ${OpenVINO_DIR})
        MESSAGE(FATAL_ERROR "OpenVINO_DIR ${OpenVINO_DIR} does not exist - aborting")
    endif()
    set(CMAKE_CUDA_ARCHITECTURES "50;75;86;89;120")
    set(GGML_CUDA ON)
    set(GGML_VULKAN ON)
    add_subdirectory(whisper.cpp)
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    # MESSAGE(FATAL_ERROR "APPLE needs defining")
else()
    MESSAGE(FATAL_ERROR "Unsupported OS")
endif()

set(CMAKE_INSTALL_PREFIX "built")
